# weft

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md  SECURITY.md  cliff.toml  compose.dev.yaml  compose.e2e.yaml  deny.toml  weft.example.yaml
.github/workflows/: ci.yml  pages.yml  release.yml  security.yml
crates/weft-core/: Cargo.toml
crates/weft-core/src/: config.rs  diff.rs  lib.rs
crates/weft-server/: Cargo.toml
crates/weft-server/src/: auth_backend.rs  error.rs  lib.rs  main.rs  proxy.rs  state.rs  supervisor.rs
crates/weft-server/src/api/: aliases.rs  auth.rs  collections.rs  console.rs  health.rs  instances.rs  mod.rs  objects.rs  ops.rs  rbac.rs  schema.rs  tenants.rs
crates/weft-server/tests/: api_integration.rs  auth_integration.rs  explorer_integration.rs  hooks_integration.rs  ops_integration.rs  persistence_integration.rs  proxy.rs  rbac_mgmt_integration.rs  schema_mgmt_integration.rs  tenants_integration.rs
crates/weft-weaviate/: Cargo.toml
crates/weft-weaviate/src/: client.rs  error.rs  graphql.rs  lib.rs  metrics.rs  types.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docker/: allinone.Dockerfile
docker/dev/: backend.dev.Dockerfile
docs/: astro.config.mjs  ec.config.mjs  package-lock.json  package.json
docs/src/content/docs/: configuration.md  getting-started.md  index.mdx  security.md  upgrading.md
docs/src/content/docs/walkthroughs/: phase-0-walking-skeleton.md  phase-1-schema-connections.md  phase-2-data-explorer.md  phase-3-multi-tenancy.md  phase-4-ops-dashboard.md
docs/walkthroughs/: phase-0-walking-skeleton.md
frontend/: .prettierrc  app.config.ts  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/src/: app.css  app.tsx  entry-server.tsx
frontend/src/components/: AuthGate.tsx  LogoutButton.test.tsx  LogoutButton.tsx  Nav.tsx  ThemeToggle.test.tsx  ThemeToggle.tsx
frontend/src/components/console/: GraphqlConsole.test.tsx  GraphqlConsole.tsx
frontend/src/components/explorer/: AggregatePanel.test.tsx  AggregatePanel.tsx  FilterBuilder.test.tsx  FilterBuilder.tsx  ImportPanel.test.tsx  ImportPanel.tsx  ObjectEditor.test.tsx  ObjectEditor.tsx  ObjectsTable.test.tsx  ObjectsTable.tsx  SearchResults.test.tsx  SearchResults.tsx  VectorMap.test.tsx  VectorMap.tsx
frontend/src/components/instances/: AddInstanceForm.tsx
frontend/src/components/ops/: BackupsTable.test.tsx  BackupsTable.tsx  MetricsPanel.test.tsx  MetricsPanel.tsx  NodesPanel.test.tsx  NodesPanel.tsx  RbacPanel.test.tsx  RbacPanel.tsx  StatsCard.test.tsx  StatsCard.tsx
frontend/src/components/schema/: AliasPanel.test.tsx  AliasPanel.tsx  CollectionActions.test.tsx  CollectionActions.tsx  CollectionForm.test.tsx  CollectionForm.tsx  DiffTable.test.tsx  DiffTable.tsx  PropertyTable.test.tsx  PropertyTable.tsx  SchemaTable.test.tsx  SchemaTable.tsx
frontend/src/components/tenants/: TenantTable.test.tsx  TenantTable.tsx
frontend/src/lib/: api.ts  pca.test.ts  pca.ts
frontend/src/routes/: [...404].tsx  index.tsx
frontend/src/routes/i/[id]/: console.tsx  diff.tsx  ops.tsx  schema.tsx
frontend/src/routes/i/[id]/c/: [name].tsx
frontend/src/routes/i/[id]/c/[name]/: index.tsx  objects.tsx  tenants.tsx
manual/: README.md  capture.py  manual.html
