[workspace]
resolver = "2"
members = ["crates/weft-core", "crates/weft-weaviate", "crates/weft-server", "crates/xtask"]

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/compufreq/weft"
authors = ["compufreq"]

[workspace.dependencies]
weft-core = { path = "crates/weft-core" }
weft-weaviate = { path = "crates/weft-weaviate" }

tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "compression-gzip", "timeout", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
figment = { version = "0.10", features = ["yaml", "env"] }
secrecy = { version = "0.10", features = ["serde"] }
dashmap = "6"
url = "2"

# dev
wiremock = "0.6"

[profile.release]
lto = "thin"
strip = true
