[package]
name = "weft-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
# Deployed as a container image, never published to crates.io
# (also lets cargo-deny accept the workspace path dependencies).
publish = false

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
weft-core = { workspace = true }
weft-weaviate = { workspace = true }

[dev-dependencies]
http-body-util = "0.1"
