[package]
name = "weft-weaviate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Minimal Rust client for the Weaviate REST/GraphQL API, built for Weft"

[dependencies]
reqwest = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = { workspace = true }
